syntax = "proto3";

    package chatPackage;

    service ChatStream {
      // Bidirectional streaming RPC
      rpc Chat(stream ChatRequest) returns (stream ChatResponse) {};
    }

    message ChatRequest {
      string message = 1;
    }

    message ChatResponse {
      string username = 1;
      string message = 2;
    }

